--- a/02_PyomoOverview.ipynb
+++ b/02_PyomoOverview.ipynb
@@ -227,12 +227,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Adapted from https://github.com/Pyomo/PyomoGettingStarted,\r\n",
+      "# by William and Becca Hart\r\n",
+      "\r\n",
+      "from pyomo.environ import *\r\n",
+      "\r\n",
+      "model = AbstractModel()\r\n",
+      "\r\n",
+      "model.m = Param(within=NonNegativeIntegers)\r\n",
+      "model.n = Param(within=NonNegativeIntegers)\r\n",
+      "\r\n",
+      "model.I = RangeSet(1, model.m)\r\n",
+      "model.J = RangeSet(1, model.n)\r\n",
+      "\r\n",
+      "model.a = Param(model.I, model.J)\r\n",
+      "model.b = Param(model.I)\r\n",
+      "model.c = Param(model.J)\r\n",
+      "\r\n",
+      "# the next line declares a variable indexed by the set J\r\n",
+      "model.x = Var(model.J, domain=NonNegativeReals)\r\n",
+      "\r\n",
+      "def obj_expression(model):\r\n",
+      "    return summation(model.c, model.x)\r\n",
+      "\r\n",
+      "model.OBJ = Objective(rule=obj_expression)\r\n",
+      "\r\n",
+      "def ax_constraint_rule(model, i):\r\n",
+      "    # return the expression for the constraint for i\r\n",
+      "    return sum(model.a[i,j] * model.x[j] for j in model.J) >= model.b[i]\r\n",
+      "\r\n",
+      "# the next line creates one constraint for each member of the set model.I\r\n",
+      "model.AxbConstraint = Constraint(model.I, rule=ax_constraint_rule)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat abstract1.py"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,12 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyomo.environ import *"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,12 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model = AbstractModel()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -283,12 +327,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model.m = Param(within=NonNegativeIntegers)\n",
+    "model.n = Param(within=NonNegativeIntegers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,12 +346,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model.I = RangeSet(1, model.m)\n",
+    "model.J = RangeSet(1, model.n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -315,12 +365,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model.a = Param(model.I, model.J)\n",
+    "model.b = Param(model.I)\n",
+    "model.c = Param(model.J)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,12 +388,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# the next line declares a variable indexed by the set J\n",
+    "model.x = Var(model.J, domain=NonNegativeReals)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,12 +407,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def obj_expression(model):\n",
+    "    return summation(model.c, model.x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -366,12 +426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model.OBJ = Objective(rule=obj_expression)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -382,12 +444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def ax_constraint_rule(model, i):\n",
+    "    \"\"\"return the expression for the constraint for i\"\"\"\n",
+    "    return sum(model.a[i,j] * model.x[j] for j in model.J) >= model.b[i]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -401,12 +467,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# the next line creates one constraint for each member of the set model.I\n",
+    "model.AxbConstraint = Constraint(model.I, rule=ax_constraint_rule)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,12 +488,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# one way to input the data in AMPL format\r\n",
+      "# for indexed parameters, the indexes are given before the value\r\n",
+      "\r\n",
+      "param m := 1 ;\r\n",
+      "param n := 2 ;\r\n",
+      "\r\n",
+      "param a :=\r\n",
+      "1 1 3\r\n",
+      "1 2 4\r\n",
+      ";\r\n",
+      "\r\n",
+      "param c:=\r\n",
+      "1 2\r\n",
+      "2 3\r\n",
+      ";\r\n",
+      "\r\n",
+      "param b := 1 1 ;\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat abstract1.dat"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -437,12 +532,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "param m := 1 ;\r\n",
+      "param n := 2 ;\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sed -n '4,6p' abstract1.dat"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -453,12 +560,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "param a :=\r\n",
+      "1 1 3\r\n",
+      "1 2 4\r\n",
+      ";\r\n",
+      "\r\n",
+      "param c:=\r\n",
+      "1 2\r\n",
+      "2 3\r\n",
+      ";\r\n",
+      "\r\n",
+      "param b := 1 1 ;\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sed -n '7,18p' abstract1.dat"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -469,12 +596,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Adapted from https://github.com/Pyomo/PyomoGettingStarted,\r\n",
+      "# by William and Becca Hart\r\n",
+      "\r\n",
+      "from pyomo.environ import *\r\n",
+      "\r\n",
+      "model = AbstractModel()\r\n",
+      "\r\n",
+      "model.I = Set()\r\n",
+      "model.J = Set()\r\n",
+      "\r\n",
+      "model.a = Param(model.I, model.J)\r\n",
+      "model.b = Param(model.I)\r\n",
+      "model.c = Param(model.J)\r\n",
+      "\r\n",
+      "# the next line declares a variable indexed by the set J\r\n",
+      "model.x = Var(model.J, domain=NonNegativeReals)\r\n",
+      "\r\n",
+      "def obj_expression(model):\r\n",
+      "    return summation(model.c, model.x)\r\n",
+      "\r\n",
+      "model.OBJ = Objective(rule=obj_expression)\r\n",
+      "\r\n",
+      "def ax_constraint_rule(model, i):\r\n",
+      "    # return the expression for the constraint for i\r\n",
+      "    return sum(model.a[i,j] * model.x[j] for j in model.J) >= model.b[i]\r\n",
+      "\r\n",
+      "# the next line creates one constraint for each member of the set model.I\r\n",
+      "model.AxbConstraint = Constraint(model.I, rule=ax_constraint_rule)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat abstract2.py"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -485,12 +649,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# abstract2.dat AMPL data format\r\n",
+      "\r\n",
+      "set I := TV Film ;\r\n",
+      "set J := Graham John Carol ;\r\n",
+      "\r\n",
+      "param a :=\r\n",
+      "TV  Graham 3\r\n",
+      "TV John 4.4\r\n",
+      "TV Carol 4.9\r\n",
+      "Film Graham 1\r\n",
+      "Film John 2.4\r\n",
+      "Film Carol 1.1\r\n",
+      ";\r\n",
+      "\r\n",
+      "param c := [*]\r\n",
+      " Graham 2.2\r\n",
+      " John 3.1416\r\n",
+      " Carol 3\r\n",
+      ";\r\n",
+      "\r\n",
+      "param b := TV 1 Film 1 ;\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! cat abstract2.dat"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -516,12 +710,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyomo.environ import *\n",
+    "\n",
+    "model = ConcreteModel()\n",
+    "\n",
+    "model.x = Var([1,2], domain=NonNegativeReals)\n",
+    "\n",
+    "model.OBJ = Objective(expr = 2*model.x[1] + 3*model.x[2])\n",
+    "\n",
+    "model.Constraint1 = Constraint(expr = 3*model.x[1] + 4*model.x[2] >= 1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -548,12 +752,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[    0.00] Setting up Pyomo environment\n",
+      "[    0.00] Applying Pyomo preprocessing actions\n",
+      "[    0.00] Creating model\n",
+      "[    0.03] Applying solver\n",
+      "[    0.07] Processing results\n",
+      "    Number of solutions: 1\n",
+      "    Solution Information\n",
+      "      Gap: 0.0\n",
+      "      Status: feasible\n",
+      "      Function Value: 0.666666666666666\n",
+      "    Solver results file: results.json\n",
+      "[    0.08] Applying Pyomo postprocessing actions\n",
+      "[    0.08] Pyomo Finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pyomo solve abstract1.py abstract1.dat --solver=glpk"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -569,12 +795,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[    0.00] Setting up Pyomo environment\n",
+      "[    0.00] Applying Pyomo preprocessing actions\n",
+      "[    0.00] Creating model\n",
+      "[    0.02] Applying solver\n",
+      "WARNING: \"[base]/Pyomo-4.2.10784-py3.5.egg/pyomo/solvers/plugins/solvers/CPLEX.py\", 221, executable\n",
+      "\tCould not locate the 'cplex' executable, which is required for solver cplex\n",
+      "[    0.02] Pyomo Finished\n",
+      "ERROR: Unexpected exception while running model:\n",
+      "\tNo executable found for solver 'cplex'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pyomo solve abstract1.py abstract1.dat --solver=cplex"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -592,12 +836,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[    0.00] Setting up Pyomo environment\n",
+      "[    0.00] Applying Pyomo preprocessing actions\n",
+      "[    0.00] Creating model\n",
+      "[    0.02] Applying solver\n",
+      "WARNING: \"[base]/Pyomo-4.2.10784-py3.5.egg/pyomo/solvers/plugins/solvers/CPLEX.py\", 221, executable\n",
+      "\tCould not locate the 'cplex' executable, which is required for solver cplex\n",
+      "[    0.03] Pyomo Finished\n",
+      "ERROR: Unexpected exception while running model:\n",
+      "\tNo executable found for solver 'cplex'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pyomo solve abstract1.py abstract1.dat --solver=cplex --summary"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -608,12 +870,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: pyomo solve [options] <model_or_config_file> [<data_files>]\r\n",
+      "\r\n",
+      "positional arguments:\r\n",
+      "  model_or_config_file  A Python module that defines a Pyomo model, or a\r\n",
+      "                        configuration file that defines options for 'pyomo\r\n",
+      "                        solve' (in either YAML or JSON format)\r\n",
+      "  data_files            Pyomo data files that defined data used to initialize\r\n",
+      "                        the model (specified in the first argument)\r\n",
+      "\r\n",
+      "optional arguments:\r\n",
+      "  -h, --help            show this help message and exit\r\n",
+      "  --generate-config-template TEMPLATE\r\n",
+      "                        Create a configuration template file in YAML or JSON\r\n",
+      "                        and exit.\r\n",
+      "  --solver SOLVER       Solver name. This option is required unless the solver\r\n",
+      "                        name is specified in a configuration file.\r\n",
+      "\r\n",
+      "Description:\r\n",
+      "\r\n",
+      "The 'pyomo solve' subcommand optimizes a Pyomo model.  The --solver option\r\n",
+      "is required because the specific steps executed are solver dependent.\r\n",
+      "The standard steps executed by this subcommand are:\r\n",
+      "\r\n",
+      "  - Apply pre-solve operations (e.g. import Python packages)\r\n",
+      "  - Create the model\r\n",
+      "  - Apply model transformations\r\n",
+      "  - Perform optimization\r\n",
+      "  - Apply post-solve operations (e.g. save optimal solutions)\r\n",
+      "\r\n",
+      "This subcommand can be executed with or without a configuration file.\r\n",
+      "The command-line options can be used to perform simple optimization steps.\r\n",
+      "For example:\r\n",
+      "\r\n",
+      "  pyomo solve --solver=glpk model.py model.dat\r\n",
+      "\r\n",
+      "This uses the 'glpk' solver to optimize the model define in 'model.py'\r\n",
+      "using the Pyomo data file 'pyomo.dat'.  Solver-specific command-line\r\n",
+      "options can be listed by specifying the '--solver' option and the '--help'\r\n",
+      "(or '-h') option:\r\n",
+      "\r\n",
+      "  pyomo solve --solver=glpk --help\r\n",
+      "\r\n",
+      "A yaml or json configuration file can also be used to specify\r\n",
+      "options used by the solver.  For example:\r\n",
+      "\r\n",
+      "  pyomo solve --solver=glpk config.yaml\r\n",
+      "\r\n",
+      "No other command-line options are required!  Further, the '--solver'\r\n",
+      "option can be omitted if the solver name is specified in the configuration\r\n",
+      "file.\r\n",
+      "\r\n",
+      "Configuration options are also solver-specific; a template configuration\r\n",
+      "file can be generated with the '--generate-config-template' option:\r\n",
+      "\r\n",
+      "  pyomo solve --solver=glpk --generate-config-template=template.yaml\r\n",
+      "  pyomo solve --solver=glpk --generate-config-template=template.json\r\n",
+      "\r\n",
+      "Note that yaml template files contain comments that describe the\r\n",
+      "configuration options.  Also, configuration files will generally support\r\n",
+      "more configuration options than are available with command-line options.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pyomo solve --help"
+   ]
   },
   {
    "cell_type": "markdown",
