Add missing equation

--- a/03_VisualizaNLP.ipynb
+++ b/03_VisualizaNLP.ipynb
@@ -105,8 +105,18 @@
    "metadata": {},
    "source": [
     "## Ejercicio: Ejemplo de Rosenbrock\n",
-    "\n"
+    "\n",
+    "$$ f(x, y) = (1 - x)^2 + 100 (y - x^2)^2 $$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
